--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "impodracer",
   "license": "Unlicense",
   "scripts": {
-    "start": "electron ./dist/main.js",
+    "start": "electron ./dist/electron-main.js",
     "devstart": "cross-env ELECTRON_DEV=dev electron ./dist/electron-main.js",
     "dev": "webpack --config config/webpack.config.dev.js",
     "build": "webpack --config config/webpack.config.base.js",
@@ -19,8 +19,6 @@
     "@typescript-eslint/parser": "^2.15.0",
     "cross-env": "^6.0.3",
     "electron": "^7.1.7",
-    "electron-is-dev": "^1.1.0",
-    "electron-reload": "^1.5.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-plugin-import": "^2.20.0",
@@ -29,7 +27,6 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
